text overflowing and visibility solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   font-family: Sora,sans-serif !important;
+  color: #000;
   /* background: linear-gradient(
       to bottom,
       transparent,
